# django-blog-improved

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  examples.html  examples.py  genindex.html  index.html  manage.py  objects.inv  populate_tests.py  pyproject.toml  quick-start.html  reference.html  requirements.txt  roadmap.html  runtests.py  search.html  searchindex.js  tags.html
.doctrees/: environment.pickle  examples.doctree  index.doctree  quick-start.doctree  reference.doctree  roadmap.doctree  tags.doctree
.doctrees/tags/: post_tag.doctree  postlist_tag.doctree
.github/workflows/: documentation.yaml
_sources/: quick-start.rst.txt  reference.rst.txt  roadmap.rst.txt  tags.rst.txt
blog/: admin.py  apps.py  conf.py  context_processors.py  models.py  urls.py  views.py
blog/fixtures/: groups.yaml  media.yaml  posts.yaml  users.yaml
blog/management/commands/: build_groups.py
blog/media/fixtures/: credits.txt
blog/static/css/: base.css  spongy-frontend-1.0.0.min.css  spongy-publishing-components-1.0.0.min.css
blog/templates/: base.html  index.html  post_detail.html  post_list.html
blog/templates/admin/: post_changeform.html
blog/templates/pages/: about.html  author.html  contact.html  form-page.html  license.html  projects.html  services.html
blog/templates/partials/: article-card.html  footer.html  header.html
blog/templatetags/: blog_tags.py
blog_improved/: admin.py  apps.py  conf.py  constants.py  context_processors.py  feeds.py  forms.py  models.py  urls.py  views.py
blog_improved/api/: __init__.py  posts.py  settings.py  urls.py
blog_improved/authors/: helpers.py  models.py
blog_improved/conf/: __init__.py  models.py  registry.py  themes.py
blog_improved/db/: managers.py
blog_improved/formatters/: env.py  markup.py  settings.py
blog_improved/formatters/html/: html_generator.py
blog_improved/helpers/: html_generator.py  hyperlink_wrapper.py
blog_improved/io/: data_directory_manager.py  file_manager.py  standard_assets.py
blog_improved/management/commands/: build_groups.py
blog_improved/migrations/: 0001_initial.py
blog_improved/posts/: models.py  post_list_markup.py  post_list_markup_presets.py  posts.py
blog_improved/presentation/: __init__.py  css_presentation.py  grid_layout.py  inline_presentation.py  layout.py  presentation_strategy.py
blog_improved/query_request/: __init__.py  annotate_query_request.py  query.py  sort_query_request.py
blog_improved/sgml/: __init__.py  presentation_attributes.py  sgml.py  sgml_attributes.py
blog_improved/static/css/: blog-6e206ccd59812e9e5c65c7f880a25bf4467e742f2cc297b0462cfd281a6f353.css  blog-f2a8ef4c24572f07b4f64e5fe9e23e301350464a.css  cv.css  homepage.css  nhsuk-frontend.min.css  spongy-frontend-1.0.2.min.css  spongy-frontend-1.0.3.min.css  spongy-nhsuk-frontend-1.0.2.min.css  spongy-nhsuk-frontend-1.0.3.min.css  spongy-publishing-components-1.0.0.min.css  spongy-publishing-components-1.0.2.min.css  spongy-publishing-components-1.0.3.min.css
blog_improved/static/js/: nhsuk.js  spongy-frontend-1.0.3.min.js
blog_improved/templates/: 404.html  base.html  index.html
blog_improved/templates/blog_improved/: 404.html  base.html  confirmation.html  post_detail.html  post_list.html  single_post.html
blog_improved/templates/pages/: about.html  author.html  contact.html  form-page.html  projects.html
blog_improved/templates/partials/: footer.html  group-identity-logo.html  main-nav.html  post-list.html
blog_improved/templatetags/: blog_list_tags.py  blog_tags.py  post.py  post_list.py
blog_improved/themes/: settings.py
blog_improved/themes/base/: base_theme.py  theme.py
blog_improved/utils/: component_loader.py  hetero_data_wrapper.py  math.py  matrices.py  normalise.py  sgml.py  strings.py  theme_intergration.py  time.py  urls.py
config/: settings.py  urls.py  views.py  wsgi.py
docs/: README.md  index.md  requirements.txt  search.html
docs/.doctrees/: index.doctree
docs/.doctrees/overview/: features.doctree
docs/_sources/: requirements.txt
docs/_sources/_build/: .buildinfo
docs/_sources/usage/: name-and-branding.md  navigation.md
docs/dev/: roadmap.html
docs/pages/: .buildinfo  genindex.html  get-started.html  index.html  objects.inv  search.html  searchindex.js
docs/pages/.doctrees/: environment.pickle  index.doctree
docs/pages/Usage/: get-started.html
docs/pages/_sources/: get-started.md.txt  index.md.txt  index.rst.txt
docs/pages/overview/: features.html  home.html
docs/pages/usage/: get-started.html  name-and-branding.html  navigation.html
docs/source/: conf.py  examples.rst  index.rst  tags.rst
docs/source/tags/: .post_tag.rst.swp  post_tag.rst  postlist_tag.rst
docs/sources/: conf.py
docs/sources/pages/: index.html  objects.inv  searchindex.js
docs/sources/usage/: reserved-urls.md
docs/usage/: get-started.md  name-and-branding.md  navigation.html
examples/: admin_login.json  local_server_settings.py  manage.py  requirements.txt  urls.py  wsgi.py
examples/bloglist/bloglist/: bloglist.html  entrypoint.example
examples/bloglist/featured/: featured.html  (+1 more)
examples/core/: apps.py
examples/data/: bloglistsort.sqlite3  default.sqlite3  postlistsort.sqlite3
examples/middleware/: database_middleware.py  debug_reverse_override.py
examples/post/: component.json
examples/postlist/: component.json
examples/templates/: base.html  breadcrumbs.html  group.html  index.html
requirements/: base.txt  local.txt
src/blog_improved/: admin.py  apps.py  conf.py  forms.py  views.py
tags/: post_tag.html  postlist_tag.html
tests/: requirements.txt  settings.py  suite.py  test_bloglist_tag.py  test_contacts.py  test_io.py  test_matrices.py  test_post_list.py  test_post_models.py  test_post_tag.py  test_postlist_tag.py  test_posts.py  test_profiles.py  test_queryset_request.py  test_settings.py  test_sgml.py  test_status.py  test_string_utils.py  test_theme.py  test_urls.py  urls.py
tests/fixtures/: contacts.yaml  groups.yaml  media.yaml  posts.yaml  redirects.yaml  tags.yaml  userprofiles.yaml  users.yaml
(+98 files in other folders)
