[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"
[project]
name="django-blog-improved"
description="Blog app with breadcrumbs, categories, contact and profiles"
license={ text="GPL-3.0" }
requires-python = ">=3.6"
authors = [
  { name = "Spongycake", email = "spongycake@spongycake.org" },
]
maintainers = [
  { name = "Spongycake", email = "spongycake@spongycake.org" },
]
keywords= ["blogging", "django", "web app",]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Web Authors",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: FSF Approved :: GPL-3.0 License",
]
dependencies = [
  "asgiref==3.4.1",
  "argon2-cffi==21.3.0",
  "autopep8==1.5.7",
  "dj-database-url==1.2.0",
  "Django==3.2.12",
  "django-crispy-forms==1.9.2",
  "crispy-forms-gds==0.2.4",
  "django-debug-toolbar==3.2.2",
  "django-model-utils==4.2.0",
  "django-phonenumber-field==6.1.0",
  "django-polymorphic==3.1.0",
  "django-taggit==3.0.0",
  "phonenumberslite==8.12.48",
  "pycodestyle==2.8.0",
  "python-dotenv==0.21.0",
  "pytz==2021.3",
  "sqlparse==0.4.2",
  "toml==0.10.2",
  "django-redirects==0.4.0",
]
dynamic = ["version"]
[project.optional-dependencies]
examples = [
  "python-lorem==1.1.2",
  "PyYAML==6.0"
]
[project.urls]
Documentation = "https://spongycake.codeberg.page/django-blog-improved/@master/docs/pages"
Tracker = "https://codeberg.org/spongycake/django-blog-improved/issues"
Source = "https://codeberg.org/spongycake/django-blog-improved"
[tool.setuptools.packages.find]
include = [
  "blog_improved*",
]
exclude = [
  "docs*",
  "tests*",
  "requirements*",
]
[tool.setuptools.dynamic]
version = {attr = "blog_improved.__version__"}
