[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"
[project]
name="django-blog-improved"
description="Blog app with breadcrumbs, categories, contact and profiles"
license={ text="GPL-3.0" }
requires-python = ">=3.6"
authors = [
  { name = "Cameron Nicolson", email = "code.cameron@nicolson.scot" },
]
maintainers = [
  { name = "Cameron Nicolson", email = "code.cameron@nicolson.scot" },
]
keywords= ["blogging", "django", "web app",]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Web Authors",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: FSF Approved :: GPL-3.0 License",
]
dependencies = [
  "Django==5.1.3",
  "django-classy-tags==4.1.0",
  "django-crispy-forms==1.9.2",
  "crispy-forms-gds==0.2.4",
  "django-model-utils==4.5.1",
  "django-phonenumber-field==6.1.0",
  "django-polymorphic==3.1.0",
  "django-taggit==6.1.0",
  "django-inlinecss @ git+https://github.com/blocher/django-inlinecss@django4",
  "phonenumberslite==8.12.48",
  "pycodestyle==2.8.0",
  "sqlparse==0.4.2",
  "toml==0.10.2",
  "django-redirects==0.5.0",
  "bigtree==0.22.3",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
  "python-lorem==1.1.2",
  "PyYAML==6.0.1",
  "beautifulsoup4==4.12.3"
]
[project.urls]
Documentation = "https://cameronnicolson.github.io/django-blog-improved/"
Tracker = "https://github.com/cameronnicolson/django-blog-improved/issues/"
Source = "https://github.com/cameronnicolson/django-blog-improved/"
[tool.setuptools.packages.find]
include = [
  "blog_improved*",
]
exclude = [
  "docs*",
  "tests*",
  "requirements*",
]
[tool.setuptools.package-data]
templates = ["*.html"]
[tool.setuptools.dynamic]
version = {attr = "blog_improved.__version__"}
