[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name="django-blog-improved"
description="Blog app with breadcrumbs, categories, contact and profiles"
license={ text="GPL-3.0" }
requires-python = ">=3.12"
authors = [
  { name = "Spongycake", email = "spongycake@spongycake.org" },
]
maintainers = [
  { name = "Spongycake", email = "spongycake@spongycake.org" },
]
keywords= ["blogging", "django", "web app",]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Web Authors",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: FSF Approved :: GPL-3.0 License",
]
dependencies = [
  "Django==5.0.7",
  "django-crispy-forms==1.9.2",
  "crispy-forms-gds==0.2.4",
  "django-model-utils==4.5.1",
  "django-phonenumber-field==6.1.0",
  "django-polymorphic==3.1.0",
  "django-taggit==3.0.0",
  "django-inlinecss @ git+https://github.com/blocher/django-inlinecss@django4",
  "phonenumberslite==8.12.48",
  "pycodestyle==2.8.0",
  "sqlparse==0.4.2",
  "toml==0.10.2",
  "django-redirects==0.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]

api = [
  "djangorestframework==3.15.2"
]

tests = [
  "python-lorem==1.1.2",
  "PyYAML==6.0.1"
]
[project.urls]
Documentation = "https://spongycake.codeberg.page/django-blog-improved/@master/docs/pages"
Tracker = "https://codeberg.org/spongycake/django-blog-improved/issues"
Source = "https://codeberg.org/spongycake/django-blog-improved"
[tool.setuptools.packages.find]
include = [
  "blog_improved*",
]
exclude = [
  "docs*",
  "tests*",
  "requirements*",
]
[tool.setuptools.package-data]
templates = ["*.html"]
[tool.setuptools.dynamic]
version = {attr = "blog_improved.__version__"}
